privating my ytb-key

--- a/pages/my_playlist.html
+++ b/pages/my_playlist.html
@@ -6,9 +6,10 @@
 <body>
   <h1>My PlayList</h1>
   <ul id="video-list"></ul>
+  <script src="../environment.js"></script>
 
   <script>
-    const apiKey = 'AIzaSyCzNQtC_u8RF5jwThuiIukI2y6tNKv8Hb8'; // Replace with your API key
+    const apiKey = YTB_API_TOKEN; // Replace with your API key
     const playlistId = 'PLGLlHNM9hxNitZXZHjLqnNhAd4FgbVqbo'; // Replace with your playlist ID
     const maxResults = 50; // Max is 50 per request
 
